fix property view overflow

--- a/ui/components-react/src/components-react/properties/renderers/PropertyView.scss
+++ b/ui/components-react/src/components-react/properties/renderers/PropertyView.scss
@@ -54,11 +54,13 @@ $text-font-color: var(--iui-color-text);
 
 .components-property-record-value {
   @include record-cell;
+  overflow: hidden;
 
   & > span {
     white-space: nowrap;
     text-overflow: ellipsis;
     width: 100%;
+    overflow: hidden;
   }
 
   .core-underlined-button {
